manifests/db_statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  labels:
    app: todos
    tier: database
spec:
  serviceName: mongo-service
  replicas: 1
  selector:
    matchLabels:
      app: todos
      tier: database
  template:
    metadata:
      labels:
        app: todos
        tier: database
    spec:
      containers:
      - name: mongodb
        image: mongo:3.6
        ports:
        - containerPort: 27017
          name: mongodb
        volumeMounts:
        - name: mongodb-data
          mountPath: /data/db
        resources:
          requests:
            cpu: "250m"
            memory: "0.5Gi"
          limits:
            cpu: "250m"
            memory: "0.5Gi"
  volumeClaimTemplates:
  - metadata:
      name: mongodb-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: standard
      resources:
        requests:
          storage: 1Gi
