manifests/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: todos
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todos
      tier: frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: todos
        tier: frontend
    spec:
      containers:
      - name: frontend
        image: asia-northeast1-docker.pkg.dev/sonic-arcadia-437913-c5/todos/frontend:v4.0.11
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            cpu: "200m"
            memory: "900Mi"
          limits:
            cpu: "200m"
            memory: "900Mi"
        
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: todos
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todos
      tier: backend
  template:
    metadata:
      labels:
        app: todos
        tier: backend
    spec:
      containers:
      - name: backend
        image: asia-northeast1-docker.pkg.dev/sonic-arcadia-437913-c5/todos/backend:v4.0.11
        ports:
        - containerPort: 3001
          name: http
        resources:
          requests:
            cpu: "200m"
            memory: "512Mi"
          limits:
            cpu: "200m"
            memory: "512Mi"
